# almighty

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
agents/blue/: README.md  pyproject.toml
agents/blue/src/almighty_blue_crew/: __init__.py  co_a.py  co_b.py  co_c.py  crew.py  doctrine.py  profile.py  s2.py  s3.py  s6.py
agents/blue/tests/: conftest.py  test_crew.py
agents/red/: README.md  pyproject.toml
agents/red/tests/: conftest.py  test_crew.py
agents/runtime/: README.md  pyproject.toml
agents/runtime/spark/: run-worker.sh
agents/runtime/src/almighty_agent_runtime/: __init__.py  celery_app.py  config.py  control_plane.py  crews.py  dispatch.py  errors.py  llm_clients.py  llm_step.py  shim.py  situation_report.py  tasks.py  wiring.py  worker.py
agents/runtime/tests/: conftest.py  test_chain.py  test_dispatch.py  test_empty_crew.py  test_isolation.py  test_llm_clients.py  test_llm_step.py  test_shim.py  test_situation_report.py  test_wiring.py
agents/scenarios/nashville-cumberland-crossing/: assertions.md  pre-scenario.md  scenario.yaml
agents/tools/: README.md  pyproject.toml
agents/tools/src/almighty_officer_tools/: __init__.py  base.py  context.py  registry.py
agents/tools/src/almighty_officer_tools/commander/: __init__.py  delegate.py  escalate.py  issue_order.py  request_support.py
agents/tools/src/almighty_officer_tools/communicator/: __init__.py  jam.py  relay.py  report.py  send.py
agents/tools/src/almighty_officer_tools/effector/: __init__.py  destroy.py  disable.py  engage.py  suppress.py
agents/tools/src/almighty_officer_tools/mover/: __init__.py  assume_posture.py  follow_route.py  halt.py  move_to.py
agents/tools/src/almighty_officer_tools/sensor/: __init__.py  classify.py  detect.py  lose_track.py  track.py
agents/tools/tests/: conftest.py  test_base.py  test_causal_predecessors.py  test_commander.py  test_communicator.py  test_effector.py  test_mover.py  test_predecessors_on_commit.py  test_sensor.py
agents/white-cell/: README.md  pyproject.toml
agents/white-cell/src/almighty_white_cell/: __init__.py  adjudicator.py  crew.py  stakes.py
agents/white-cell/tests/: conftest.py  test_adjudicator.py  test_crew.py  test_stakes.py
czml/demos/: README.md  _view.html  effect-catalog.czml  nashville-vignette.czml
czml/templates/: README.md  _smoke-test.html  ew-cone.czml.json  indirect-fire-arc.czml.json  ir-plume.czml.json  jamming-circle.czml.json  keyhole-footprint.czml.json  masint-cell.czml.json  radar-fan.czml.json  satellite-swath.czml.json  uas-corridor.czml.json
docs/: architecture.md  better-late-than-never.md  dummy-instructions.md  glossary.md
docs/schema/: artifacts.md  capability-profile.schema.json  capability-profiles.md  dis-adapter.md  entity-event.md  hla-adapter.md  officer-interfaces.md
docs/superpowers/plans/: 2026-04-26-hackathon-demo.md
docs/superpowers/specs/: 2026-04-26-hackathon-demo-design.md
infra/aws/demo/: .env.example  Caddyfile  Dockerfile.caddy  RUNBOOK.md  cloud-init.sh  docker-compose.yml  iam-policy-route53-dns01.json
infra/supabase/: seed.sql
kernel/: README.md  pyproject.toml
kernel/almighty_kernel/: __init__.py  dag.py  errors.py
kernel/capability-profiles/: hybrid-irregular.json  near-peer.json  peer.json  us-bct.json  validate.sh
kernel/schema/: README.md  entities.sql  events.sql
kernel/tests/: test_namespacing.py
services/control-plane/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
services/control-plane/migrations/: 0001_tenants.sql  0002_scenarios.sql  0005_turn_snapshots.sql  1763676000000_initial-schema.sql  1763676000001_tenants-scenarios.sql  1763676000002_turn-snapshots.sql  1763676000003_override-policies.sql
services/control-plane/sql/: init-test-db.sql
services/control-plane/src/: app.ts  auth.ts  config.ts  db.ts  override-gateway.ts  server.ts  turn-controller.ts  types.ts
services/control-plane/tests/: auth.test.ts  helpers.ts  integration.test.ts  override-gateway.test.ts  setup.ts  turn-controller.test.ts
services/czml-adapter/: README.md  pyproject.toml
services/czml-adapter/src/almighty_czml_adapter/: __init__.py  app.py  families.py  models.py  runner.py  translator.py
services/czml-adapter/tests/: conftest.py  test_app.py  test_runner.py  test_translator.py
services/czml-validator/: README.md  pyproject.toml
services/czml-validator/src/almighty_czml_validator/: __init__.py  app.py  families.py  models.py  templates.py  validator.py
services/czml-validator/tests/: conftest.py  test_app.py  test_validator.py
services/websocket/: .env.example  README.md  package.json  pnpm-lock.yaml
services/websocket/src/: app.ts  auth.ts  config.ts  (+3 more)
web/renderer/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
(+65 files in other folders)
