[project]
name = "almighty-blue-crew"
version = "0.1.0"
description = "Almighty blue battalion crew stubs (WS-403)"
requires-python = ">=3.11"
authors = [{ name = "Almighty Team" }]
dependencies = [
    "crewai>=0.95",
    "pydantic>=2.6",
    "almighty-officer-tools",
    "almighty-agent-runtime",
    "almighty-czml-validator",
    "almighty-kernel",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["almighty_blue_crew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
