[project]
name = "almighty-officer-tools"
version = "0.1.0"
description = "Almighty CrewAI tool wrappers for the 20 officer interface verbs (WS-402)"
requires-python = ">=3.11"
authors = [{ name = "Almighty Team" }]
dependencies = [
    "crewai>=0.95",
    "pydantic>=2.6",
    "almighty-kernel",
    "almighty-czml-validator",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["almighty_officer_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
