[project]
name = "almighty-white-cell"
version = "0.1.0"
description = "Almighty white-cell adjudicator agent (WS-405)"
requires-python = ">=3.11"
authors = [{ name = "Almighty Team" }]
dependencies = [
    "crewai>=0.95",
    "pydantic>=2.6",
    "almighty-agent-runtime",
    "almighty-kernel",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["almighty_white_cell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
