[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almighty-czml-adapter"
version = "0.1.0"
description = "Live PyRapide → CZML adapter service for Almighty (WS-503)"
requires-python = ">=3.11"
authors = [{ name = "Dynamo Technologies" }]
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=13.0",
    "almighty-kernel",
    "almighty-czml-validator",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
