[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almighty-czml-validator"
version = "0.1.0"
description = "Capability-gated CZML validator service for Almighty (WS-202)"
requires-python = ">=3.11"
authors = [{ name = "Dynamo Technologies" }]
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
